media-keys: save screenshots directly

Now that we decided to deprecate fallback mode completely, we can depend
on the shell being around to take screenshots, without any X11 fallback
paths.

This allows g-s-d not to depend on gnome-screenshot anymore for the core
feature, which will let gnome-screenshot free to evolve into a proper
application.

https://bugzilla.gnome.org/show_bug.cgi?id=681844